# promethee

./: .env.example  .gitignore  README.md  git_helper.py  main.py  prompts.yml  pyproject.toml  requirements.txt
core/: __init__.py  config.py  crypto.py  database.py  llm_service.py  rag_engine.py  session_memory.py  skill_manager.py  tools_engine.py
documentation/: doc_developpeur_tools.docx  modele_tools.py
scripts/: download_katex.py
skills/: conventions_code_python.md  guide_creation_powerpoint.md  guide_export_excel.md  guide_redactionnel_administratif.md  workflow_legifrance.md
tests/: conftest.py  test_crypto.py  test_data_tools.py  test_database.py  test_folders.py  test_python_tools.py  test_rag_engine.py  test_session_memory.py  test_skill_manager.py  test_skill_tools.py  test_sql_tools.py  test_system_tools.py  test_tools_engine.py
tools/: __init__.py  data_file_tools.py  data_tools.py  datagouv_tools.py  export_tools.py  judilibre_tools.py  legifrance_tools.py  ocr_tools.py  python_tools.py  skill_tools.py  sql_tools.py  system_tools.py  thunderbird_tools.py  web_search_tools.py  web_tools.py
ui/: __init__.py  app.py  main_window.py  splash_screen.py  workers.py
ui/dialogs/: __init__.py  about_dialog.py  cache_dialog.py  passphrase_dialog.py  settings_dialog.py
ui/panels/: __init__.py  monitoring_panel.py  rag_panel.py  tools_panel.py
ui/panels/chat/: __init__.py  attachment_handler.py  chat_input.py  chat_panel.py  file_processor.py  message_builder.py  streaming_handler.py  viewport_manager.py
ui/widgets/: __init__.py  attachment_widget.py  conversation_sidebar.py  icon_helper.py  latex_renderer.py  message_widget.py  ocr_engine.py  office_extractor.py  pdf_viewer.py  profile_manager.py  profile_selector.py  section_label.py  skill_editor.py  styles.py  theme_switch.py  typing_indicator.py  url_cache.py  url_extractor.py
ui/widgets/themes/: base.qss.tpl  tabs.qss.tpl  tokens.py
